--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:wong="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:wong="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <com.wong.customtextview.CustomFlowLayout
+        android:id="@+id/kk"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:background="@android:color/holo_blue_light"
@@ -17,15 +18,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.wong.customtextview.CustomTextView
+        <TextView
+            android:id="@+id/ctv"
             android:layout_margin="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/holo_green_dark"
             android:padding="8dp"
-            app:custom_textColor="@color/design_default_color_error"
-            app:custom_textSize="16"
-            wong:custom_text="Hello world11" />
+            android:textColor="@color/design_default_color_error"
+            android:textSize="16sp" />
         <com.wong.customtextview.CustomTextView
             android:layout_margin="3dp"
             android:layout_width="wrap_content"
@@ -193,7 +194,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@android:color/holo_red_light">
+    android:background="@android:color/holo_red_light"
+    android:onClick="addStr">
 
 </LinearLayout>
 </LinearLayout>
